<resources>
    <string name="app_name">TransFiles</string>
    <string name="hnom">Nom</string>
    <string name="hprenom">Prenom</string>
    <string name="hmdp">Mot de passe</string>
    <string name="hemail">Adresse courriel</string>
    <string name="hnomlobby">Nom</string>
    <string name="hmdplobby">Mot de passe</string>
    <string name="tradio_one">Homme</string>
    <string name="tradio_two">Femme</string>
    <string name="tradio_three">Autre</string>
    <string name="tbinscription">Envoyer</string>
    <string name="texterlist">Texter le contact</string>
    <string name="stext">Bienvenue sur l"'"application. Veuillez entrer vos informations! </string>
    <string name="nToast">Le champ nom est vide ou erronné!</string>
    <string name="pToast">Le champ prenom est vide ou erronné!</string>
    <string name="mToast">Le champ mot de passe est vide ou erronné!</string>
    <string name="eToast">Le champ adresse courriel est vide ou erronné!</string>
    <string name="tToast">Le champ telephone est vide ou erronné!</string>
    <string name="ajouter">Ajouter un contact</string>
    <string name="supprimer">Supprimer un contact</string>
    <string name="texter">Texter un contact</string>
    <string name="quitter">Quitter</string>
    <string name="htel">Numéro de télephone</string>
    <string name="textcompte">Bienvenue :</string>
    <string name="textcompteajouter">Voici vos contact :</string>
    <string name="imgbtntext">Appuyez pour choisir une photo</string>
    <string name="tbconnexion">Déjà inscrit?</string>
    <string name="ctext">Vous pouvez utiliser votre compte maintenant!</string>
    <string name="btnconnexion">Connexion</string>
    <string name="hmessage">Écrivez votre message ici</string>
    <string name="tbtnaffiche">Afficher le message</string>
    <string name="textosToast">Message sauvegardé!</string>
    <string name="connexionToast">Quelque chose ne va pas avec vos informations, veuillez réessayer!</string>
    <string name="contactToast">L"'"utilisateur n"'"esxite pas</string>
    <string name="tgoLobby">Joindre un lobby</string>
    <string name="tgoCreerLobby">Créer un lobby</string>
    <string name="htexte">Vous pouvez écrire ici</string>
    <string name="tChargerFichier">Charger un fichier</string>
    <string name="tEnvoyer">Envoyer</string>
    <string name="textonOff">Ouvert</string>
    <string name="textdiscover">Rechercher</string>
    <string name="tbtnmode">cacher</string>
    <string name="ndevice">Aucun appareil détecté</string>
    <string name="nconnected">Pas connecté</string>
    <string name="connected">Connecté</string>
    <string name="On">Ouvert</string>
    <string name="Off">Fermé</string>
    <string name ="DiscoveryS">Recherche d"'"appareil</string>
    <string name="DiscorveryF">Recherche d"'"appareil raté</string>
    <string name="Host">Hôte</string>
    <string name="Client">Client</string>
    <string name="Parametre">Paramètre</string>
    <string name="tbackground">Changer le fond d"'"écran</string>
    <string name="confirm">select</string>
    <string name="cancel">annuler</string>
    <string name="options">Options</string>
    <string name="tvalueSeekR">0</string>
    <string name="tvalueSeekG">0</string>
    <string name="tvalueSeekB">0</string>
    <string name="tTest">Tester</string>
</resources>
