<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Project"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">
    <TextView
        style="@style/ProjectTextView"
        android:id="@+id/insctext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40sp"
        android:text="@string/ctext"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hemail" />

    <EditText
        android:id="@+id/mdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hmdp" />
    <Button
        style="@style/ProjectButton"
        android:id="@+id/bidconnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnconnexion"/>
</LinearLayout>